03-deploy-microservices/03-ms-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-b
  namespace: osm-poc-demo
  labels:
    app: ms-b
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-b
  template:
    metadata:
      labels:
        app: ms-b
        version: v1
        ambient.istio.io/redirection: enabled
        topology.istio.io/network: main-network
    spec:
      serviceAccountName: ms-b
      containers:
        - name: ms-b
          image: quay.io/${QUAY_ORG}/osm-poc-ms-b:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
